--- a/Light/prepros.config
+++ b/Light/prepros.config
@@ -977,6 +977,12 @@
         }
       },
       {
+        "file": "#source/js/tunnel.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "#source/reservation.kit",
         "config": {
           "customOutput": "reservation.html"
